# example-heroku-darpi

./: .env.example  .gitignore  Cargo.toml  Procfile  README.md
migrations/2021-02-21-164652_users/: up.sql
src/: controller.rs  extractors.rs  handlers.rs  jobs.rs  main.rs  middleware.rs  models.rs  schema.rs  starwars.rs
