[package]
name = "example-heroku-darpi"
version = "0.1.0"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darpi = { git = "https://github.com/darpi-rs/darpi.git", branch = "master" }
darpi-middleware = { git = "https://github.com/darpi-rs/darpi.git", branch = "master" }
darpi-graphql = { git = "https://github.com/darpi-rs/darpi.git", branch = "master" }
async-graphql = "2.5.4"
slab = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "0.2.11", features = ["full"]}
shaku = {version = "0.5.0", features = ["thread_safe"]}
derive_more = "0.99.11"
async-trait = "0.1.42"
env_logger = "0.8.2"
log = "0.4.13"
jsonwebtoken = "=7.2"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
